[project]
name = "edge-sim"
version = "0.0.1"
description = "LIS edge analyzer simulator harness + conformance-fixture skeleton (LIS-9 / S0.7)."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
edge-sim = "edge_sim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edge_sim"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
